package jobs4u.base.candidatemanagement;

import jakarta.persistence.Embeddable;

@Embeddable
public class PhoneNumber {
}
